--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,42 +2,55 @@ name: Build and Push to Amazon ECR
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  workflow_dispatch:
 
 env:
   AWS_REGION: us-east-1
+  WEBAPP_REPO: 851725282833.dkr.ecr.us-east-1.amazonaws.com/clo835-webapp
+  MYSQL_REPO: 851725282833.dkr.ecr.us-east-1.amazonaws.com/clo835-mysql
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     steps:
+      # 1️⃣ Checkout source code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
 
+      # 3️⃣ Verify AWS identity
       - name: Verify AWS identity
         run: aws sts get-caller-identity
 
+      # 4️⃣ Login to Amazon ECR
       - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and push Web App image
+      # 5️⃣ Build and push Web App image
+      - name: Build & Push WebApp Image
         run: |
-          WEB_URI=${{ secrets.ECR_REPOSITORY_WEBAPP }}
+          echo "🚀 Building and pushing WebApp image..."
           docker build -t webapp:latest -f Dockerfile .
-          docker tag webapp:latest ${WEB_URI}:latest
-          docker push ${WEB_URI}:latest
+          docker tag webapp:latest ${{ env.WEBAPP_REPO }}:latest
+          docker push ${{ env.WEBAPP_REPO }}:latest
+          echo "✅ WebApp image pushed to ECR: ${{ env.WEBAPP_REPO }}:latest"
 
-      - name: Build and push MySQL image
+      # 6️⃣ Build and push MySQL image
+      - name: Build & Push MySQL Image
         run: |
-          MYSQL_URI=${{ secrets.ECR_REPOSITORY_MYSQL }}
+          echo "🗄️ Building and pushing MySQL image..."
           docker build -t mysql-custom:latest -f Dockerfile_mysql .
-          docker tag mysql-custom:latest ${MYSQL_URI}:latest
-          docker push ${MYSQL_URI}:latest
+          docker tag mysql-custom:latest ${{ env.MYSQL_REPO }}:latest
+          docker push ${{ env.MYSQL_REPO }}:latest
+          echo "✅ MySQL image pushed to ECR: ${{ env.MYSQL_REPO }}:latest"
