--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,17 +8,19 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  WEB_URI: 851725282833.dkr.ecr.us-east-1.amazonaws.com/clo835-webapp
-  MYSQL_URI: 851725282833.dkr.ecr.us-east-1.amazonaws.com/clo835-mysql
+  ECR_WEB_URI: 851725282833.dkr.ecr.us-east-1.amazonaws.com/clo835-webapp
+  ECR_MYSQL_URI: 851725282833.dkr.ecr.us-east-1.amazonaws.com/clo835-mysql
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # 1️⃣ Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
+      # 2️⃣ Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -26,20 +28,27 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      # 3️⃣ Verify AWS identity
+      - name: Verify AWS identity
+        run: aws sts get-caller-identity
+
+      # 4️⃣ Login to Amazon ECR
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build and Push WebApp image
+      # 5️⃣ Build and Push Web App image
+      - name: Build and Push Web App image
         run: |
-          echo "Building WebApp Docker image..."
+          echo "Building WebApp image..."
           docker build -t webapp:latest -f Dockerfile .
-          docker tag webapp:latest ${{ env.WEB_URI }}:latest
-          docker push ${{ env.WEB_URI }}:latest
+          docker tag webapp:latest $ECR_WEB_URI:latest
+          docker push $ECR_WEB_URI:latest
 
+      # 6️⃣ Build and Push MySQL image
       - name: Build and Push MySQL image
         run: |
-          echo "Building MySQL Docker image..."
+          echo "Building MySQL image..."
           docker build -t mysql-custom:latest -f Dockerfile_mysql .
-          docker tag mysql-custom:latest ${{ env.MYSQL_URI }}:latest
-          docker push ${{ env.MYSQL_URI }}:latest
+          docker tag mysql-custom:latest $ECR_MYSQL_URI:latest
+          docker push $ECR_MYSQL_URI:latest
